Converted bazaar to implement Components