@@ -4,10 +4,10 @@ import me.lagggpixel.core.modules.bazaar.BazaarModule;
 import me.lagggpixel.core.modules.bazaar.escrow.EscrowTransaction;
 import me.lagggpixel.core.modules.bazaar.interfaces.Bazaar;
 import me.lagggpixel.core.modules.bazaar.interfaces.BazaarSubItem;
-import me.lagggpixel.core.modules.bazaar.utils.gui.BazaarGui;
-import me.lagggpixel.core.utils.ItemBuilder;
 import me.lagggpixel.core.modules.bazaar.utils.BazaarMiscUtil;
-import org.bukkit.ChatColor;
+import me.lagggpixel.core.modules.bazaar.utils.gui.BazaarGui;
+import me.lagggpixel.core.utils.ChatUtils;
+import me.lagggpixel.core.utils.ItemBuilder;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 
@@ -21,38 +21,38 @@ import java.util.stream.Collectors;
 public class BazaarSubItemBazaarGui extends BazaarGui {
 
     public BazaarSubItemBazaarGui(Player player, BazaarSubItem item) {
-        super(item.getParent().getCategory().getName() + " ➜ " + ChatColor.stripColor(item.getNamedIcon().toItemStack().getItemMeta().getDisplayName()), 36, new HashMap<String, Runnable>() {{
+        super(ChatUtils.stringToComponentCC(item.getParent().getCategory().getName() + " ➜ " + ChatUtils.componentToString(item.getNamedIcon().toItemStack().getItemMeta().displayName())), 36, new HashMap<>() {{
             Runnable back = () -> new BazaarCategoryBazaarGui(player, item.getParent().getCategory(), false).show(player);
 
-            put(ChatColor.GREEN + "Go Back", back);
-            put(ChatColor.GOLD + "Go Back", back);
-            put(ChatColor.GREEN + "Manage Orders", () -> {
+            put(ChatUtils.stringToComponentCC("&aGo Back"), back);
+            put(ChatUtils.stringToComponentCC("&6Go Back"), back);
+            put(ChatUtils.stringToComponentCC("&aManage Orders"), () -> {
                 // TODO: implement manage orders
             });
-            put(ChatColor.GREEN + "View Graphs", () -> {
+            put(ChatUtils.stringToComponentCC("&aView Graphs"), () -> {
                 // TODO: implement graphs
             });
 
-            put(ChatColor.GREEN + "Buy Instantly", () -> new BazaarInstantBuyBazaarGui(player, item, 0).show(player));
+            put(ChatUtils.stringToComponentCC("&aBuy Instantly"), () -> new BazaarInstantBuyBazaarGui(player, item, 0).show(player));
         }});
 
         BazaarMiscUtil.fillEmpty(this);
 
-        String name = ChatColor.stripColor(item.getNamedIcon().toItemStack().getItemMeta().getDisplayName());
+        String name = ChatUtils.componentToString(Objects.requireNonNull(item.getNamedIcon().toItemStack().getItemMeta().displayName()));
         AtomicInteger amountToSell = new AtomicInteger();
-        Arrays.stream(player.getInventory().getContents()).filter(Objects::nonNull).map(stack -> new ItemBuilder(stack.clone()).setDisplayName(ChatColor.stripColor(stack.getItemMeta().getDisplayName())).toItemStack()).filter(stack -> stack.isSimilar(new ItemBuilder(item.getItem().clone()).setDisplayName(ChatColor.stripColor(item.getItem().getItemMeta().getDisplayName())).toItemStack())).forEach(stack -> amountToSell.addAndGet(stack.getAmount()));
+        Arrays.stream(player.getInventory().getContents()).filter(Objects::nonNull).map(stack -> new ItemBuilder(stack.clone()).setDisplayName(ChatUtils.stringToComponent(ChatUtils.componentToString(stack.getItemMeta().displayName()))).toItemStack()).filter(stack -> stack.isSimilar(new ItemBuilder(item.getItem().clone()).setDisplayName(ChatUtils.stringToComponent(ChatUtils.componentToString(item.getItem().getItemMeta().displayName()))).toItemStack())).forEach(stack -> amountToSell.addAndGet(stack.getAmount()));
 
-        List<EscrowTransaction> top6SellOrders = BazaarModule.getBazaar().getEscrow().getRankedSellOrders().stream().filter(transaction -> transaction.getSubItem().equals(item)).limit(6).collect(Collectors.toList());
-        List<EscrowTransaction> top6BuyOrders = BazaarModule.getBazaar().getEscrow().getRankedBuyOrders().stream().filter(transaction -> transaction.getSubItem().equals(item)).limit(6).collect(Collectors.toList());
+        List<EscrowTransaction> top6SellOrders = BazaarModule.getBazaar().getEscrow().getRankedSellOrders().stream().filter(transaction -> transaction.getSubItem().equals(item)).limit(6).toList();
+        List<EscrowTransaction> top6BuyOrders = BazaarModule.getBazaar().getEscrow().getRankedBuyOrders().stream().filter(transaction -> transaction.getSubItem().equals(item)).limit(6).toList();
 
-        this.addItem(10, new ItemBuilder(ChatColor.GREEN + "Buy Instantly", Material.GOLDEN_HORSE_ARMOR).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
+        this.addItem(10, new ItemBuilder(ChatUtils.stringToComponentCC("&aBuy Instantly"), Material.GOLDEN_HORSE_ARMOR).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
                 "&8" + name + "\n\n" +
                         "&7Price per unit: &6" + BazaarModule.getBazaar().getEscrow().getBuyPrice(item) + "\n" +
                         "&7Stack price: &6" + BazaarModule.getBazaar().getEscrow().getBuyPrice(item) * 64 + "\n\n" +
                         "&eClick to pick amount!"
         ))).toItemStack());
 
-        this.addItem(11, new ItemBuilder(ChatColor.GOLD + "Sell Instantly", Material.HOPPER).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
+        this.addItem(11, new ItemBuilder(ChatUtils.stringToComponentCC("&6Sell Instantly"), Material.HOPPER).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
                 "&8" + name + "\n\n" +
                         "&7Inventory: &a" + amountToSell.get() + "\n\n" +
                         "&7Amount: &a" + amountToSell.get() + "&7x\n" +
@@ -63,13 +63,13 @@ public class BazaarSubItemBazaarGui extends BazaarGui {
 
         this.addItem(13, item.getItem());
 
-        this.addItem(15, new ItemBuilder(ChatColor.GREEN + "Create Buy Order", Material.MAP).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
+        this.addItem(15, new ItemBuilder(ChatUtils.stringToComponentCC("&aCreate Buy Order"), Material.MAP).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
                 "&8" + name + "\n\n" +
                         "&aTop Orders:\n" + (top6BuyOrders.isEmpty() ? "&c No buy orders!" : top6BuyOrders.stream().map(transaction -> "&8- &6" + transaction.getPrice() + " coins&7 each | &a" + transaction.getAmount() + "&7x from &f1 &7offer").collect(Collectors.joining("\n"))) +
                         (top6BuyOrders.isEmpty() ? "" : "\n&eClick to setup buy order!")
         ))).toItemStack());
 
-        this.addItem(16, new ItemBuilder(ChatColor.GOLD + "Create Sell Offer", Material.MAP).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
+        this.addItem(16, new ItemBuilder(ChatUtils.stringToComponentCC("&6Create Sell Offer"), Material.MAP).addLore(Arrays.asList(BazaarMiscUtil.buildLore(
                 "&8" + name + "\n\n" +
                         "&6Top Offers:\n" + (top6SellOrders.isEmpty() ? "&c No sell orders!" : top6SellOrders.stream().map(transaction -> "&8- &6" + transaction.getPrice() + " coins&7 each | &a" + transaction.getAmount() + "&7x from &f1 &7offer").collect(Collectors.joining("\n"))) +
                         (top6SellOrders.isEmpty() ? "" : (amountToSell.get() < 1 ? "\n&8None in inventory!" : "\n&eClick to setup sell order!"))
